--- a/app/src/main/webapp/templates/common-footer.xhtml
+++ b/app/src/main/webapp/templates/common-footer.xhtml
@@ -8,7 +8,7 @@
 <ui:composition>
 
     <div class="text-center">
-        <small>Allezon Inc.</small>
+        <small>Alleblog Inc.</small>
     </div>
 
 </ui:composition>
