--- a/app/src/main/webapp/templates/common-header.xhtml
+++ b/app/src/main/webapp/templates/common-header.xhtml
@@ -8,7 +8,7 @@
 <ui:composition>
 
     <div class="text-center">
-        <h2>Allezon</h2>
+        <h2>Alleblog</h2>
     </div>
 
 </ui:composition>
